# auditui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh.md  TODO.md  deploy-xserver.sh  install.sh
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: cache.rs  cost.rs  lib.rs  memory.rs  session.rs  skills.rs
core/src/providers/: claude.rs  codex.rs  hermes.rs  qwen.rs
scripts/: claude-session-lookup.py
skills/session-audit/: SKILL.md
src/: cache.rs  cost.rs  custom_terminal.rs  dashboard.rs  main.rs  md.rs  session.rs  tui.rs  update.rs
src/providers/: claude.rs  codex.rs  mod.rs
tui/: Cargo.toml
tui/src/: main.rs  tui.rs  update.rs
