[package]
name = "auditui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Terminal UI for browsing Claude / Codex / Qwen coding agent session logs"
license = "MIT"
repository = "https://github.com/rollysys/auditui"
readme = "README.md"

[[bin]]
name = "auditui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
anyhow = "1"
rayon = "1.10"
bincode = "1.3"
unicode-width = "0.1"
regex = "1"
pulldown-cmark = "0.13.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
