[package]
name = "auditui-core"
description = "Session discovery, transcript parsing and dashboard aggregation for auditui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
anyhow = "1"
rayon = "1.10"
bincode = "1.3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
