[package]
name = "auditui"
description = "Terminal UI for browsing Claude / Codex / Qwen coding agent session logs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[[bin]]
name = "auditui"
path = "src/main.rs"

[dependencies]
auditui-core = { path = "../core" }
ratatui = "0.28"
crossterm = "0.28"
pulldown-cmark = "0.13.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
unicode-width = "0.1"
anyhow = "1"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
